--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataChat</title>
+    <title>ChatFinity Ai</title>
 </head>
 
 <body>
@@ -66,3 +66,4 @@
 
 
 </html>
+
