--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <p class="heading">DataChat</p>
+    <p class="heading"> ChatFinity Ai</p>
     <div class="account"><i class="fa-solid fa-circle-user"></i>
         <div class="googleLogin" id="googleLogin"><i class="fa-brands fa-google"></i>Sign in with google</div>
 
@@ -66,4 +66,5 @@
 
 
 </html>
+
 
