--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatFinity Ai</title>
-    <script src="script.js" defer>
-   
-</script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -67,6 +65,7 @@
 
 
 </html>
+
 
 
 
