--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="chats" id="chats">
         <div class="helloChat" id="helloMsg">
-            <input type="text" placeholder="Hello! I am DataChat" class="dataChat-defualt" disabled>
+            <input type="text" placeholder="Hello! I am Chatfinity" class="dataChat-defualt" disabled>
         </div>
     </div>
 
@@ -65,6 +65,7 @@
 
 
 </html>
+
 
 
 
